# dissco

./: .gitignore  BUILDING_LINUX.md  BUILDING_MACOS.md  BUILDING_WINDOWS.md  CMakeLists.txt  README.md
.github/workflows/: docs.yml  release.yml
CMOD/: CMakeLists.txt
CMOD/src/: Bottom.cpp  Bottom.h  CMOD.h  Define.h  Event.cpp  Event.h  FileValue.cpp  FileValue.h  Libraries.h  Main.cpp  Matrix.cpp  Matrix.h  ModParser.cpp  Modifier.cpp  Modifier.h  NotationScore.cpp  NotationScore.h  Note.h  Output.cpp  Output.h  Patter.cpp  Piece.cpp  Piece.h  Random.cpp  Random.h  Rational.h  Section.cpp  Section.h  Sieve.cpp  Sieve.h  SignalHandlers.cpp  SignalHandlers.h  Tempo.cpp  Tempo.h  TimeSignature.h  Utilities.cpp  Utilities.h  piece-experimental.cpp  tables.h
Documents/: tutorial_sound.md
LASS/src/: AllPassFilter.cpp  AllPassFilter.h  AuWriter.cpp  AuWriter.h  BiQuadFilter.cpp  Collection.cpp  Collection.h  Constant.cpp  Constant.h  DynamicVariable.cpp  DynamicVariable.h  DynamicVariableSequence.cpp  DynamicVariableSequence.h  DynamicVariableSequenceIterator.cpp  Envelope.cpp  Envelope.h  EnvelopeIterator.cpp  EnvelopeLibrary.cpp  Filter.cpp  Filter.h  Interpolator.cpp  Interpolator.h  InterpolatorIterator.cpp  InterpolatorIterator.h  InterpolatorTypes.cpp  LASS.h  LPCombFilter.cpp  LPCombFilter.h  Loudness.cpp  Loudness.h  LowPassFilter.cpp  MarkovModel.h  MemoryLeakCheck.cpp  MemoryLeakCheck.h  MultiPan.cpp  MultiPan.h  MultiTrack.cpp  MultiTrack.h  Pan.cpp  Pan.h  (+21 more)
LASSIE/: CMakeLists.txt
LASSIE/src/: inst.hpp  lassie.hpp
LASSIE/src/core/: LayerReferenceUtils.hpp  event_struct.hpp  project_struct.hpp
LASSIE/src/dialogs/: FunctionGenerator.cpp  FunctionGenerator.hpp
LASSIE/src/dialogs/functions/: ChooseLFunction.hpp  FibonacciFunction.cpp  FibonacciFunction.hpp  FunctionRegistrations.cpp  FunctionRegistry.cpp  FunctionRegistry.hpp  FunctionWidget.cpp  FunctionWidget.hpp  InverseFunction.cpp  InverseFunction.hpp  LNFunction.cpp  LNFunction.hpp  MarkovFunction.cpp  MarkovFunction.hpp  RandomFunction.cpp  RandomFunction.hpp  RandomIntFunction.hpp  RandomOrderIntFunction.hpp  RangeFunction.cpp  RangeFunction.hpp
LASSIE/src/dialogs/functions/impl/: DecayFunction.cpp  DecayFunction.hpp  MakeEnvelopeFunction.cpp  MakeEnvelopeFunction.hpp  MakePatternFunction.hpp  MakeSieveFunction.cpp  MakeSieveFunction.hpp  RevFunctionBase.cpp  RevFunctionBase.hpp  RevFunctions.hpp  SPAFunction.cpp  SPAFunction.hpp  SelectFunction.cpp  SelectFunction.hpp  StaticConstantFunctions.hpp  ValuePickFunction.cpp  ValuePickFunction.hpp
LASSIE/src/ui/: Attributes.ui
LASSIE/src/widgets/: EnvLibDrawingArea.cpp  EventAttributesViewController.cpp  LayerBox.cpp  MakeEnvelopeRow.cpp  Modifiers.cpp  ProjectViewController.cpp
LASSIE/src/windows/: MainWindow.hpp  MarkovModelLibraryWindow.cpp
cmake-modules/: FindXercesC.cmake
external-libs/muParser/: CMakeLists.txt  LICENSE
latest/LASS/html/: AuWriter_8cpp_source.html  Collection_8cpp_source.html  Collection_8h_source.html  DynamicVariableSequence_8cpp_source.html  Envelope_8cpp_source.html  Filter_8cpp_source.html  InterpolatorTypes_8cpp_source.html  Interpolator_8cpp_source.html  MultiTrack_8cpp_source.html  MultiTrack_8h_source.html  Reverb_8cpp_source.html  Score_8cpp_source.html  Sound_8cpp_source.html  Spatializer_8cpp_source.html  classAbstractIterator.html  classAbstractIterator_a131acaa938ffedf104e5e3b55dffc5c2_icgraph.map  classAbstractIterator_a131acaa938ffedf104e5e3b55dffc5c2_icgraph.md5  classAbstractIterator_aabada3692730edd3a71070e9fc0fd3c0_icgraph.map  classAbstractIterator_aabada3692730edd3a71070e9fc0fd3c0_icgraph.md5  classCollection-members.html  classCollection.html  classCollection_acd5dfa486c735fe26700dd94e2b0d0c4_icgraph.map  classCollection_acd5dfa486c735fe26700dd94e2b0d0c4_icgraph.md5  classCollection_ae169d364f128bc873207540019978cad_icgraph.map  classCollection_ae169d364f128bc873207540019978cad_icgraph.md5  classCubicSplineInterpolator-members.html  classCubicSplineInterpolator.html  classExponentialInterpolator-members.html  classExponentialInterpolator.html  classInterpolator-members.html  classInterpolator.html  classIterator.html  classIterator_a12aa5b9d3dd7370cd40943427834adc6_icgraph.map  classIterator_a12aa5b9d3dd7370cd40943427834adc6_icgraph.md5  classIterator_a69b4bebf4a915a4ee591e6c8bd9b9b9a_icgraph.map  classIterator_a69b4bebf4a915a4ee591e6c8bd9b9b9a_icgraph.md5  classLinearInterpolator-members.html  classLinearInterpolator.html  classMultiTrack-members.html  classMultiTrack.html  (+12 more)
latest/LASS/html/search/: all_12.js  all_c.js  functions_10.js  functions_6.js  functions_b.js  functions_d.js
latest/LASSIE/html/: EnvelopeLibraryWindow_8cpp_source.html  EventAttributesViewController_8cpp_source.html  MainWindow_8cpp_source.html  PaletteViewController_8cpp_source.html  ProjectViewController_8cpp_source.html  ProjectViewController_8hpp_source.html  RevFunctionBase_8cpp_source.html  RevFunctionBase_8hpp_source.html  classProjectView.html  classRevFunctionBase.html  event__struct_8hpp_source.html  structHEvent.html  structTempo.html  structTimeSignature.html
